<resources>
    <string name="app_name">Prototype</string>
    <string name="button_send">Send</string>
    <string name="main_title_teams">Monthly Spending</string>
    <string name="main_title_settings">Settings</string>
    <string name="main_title_plus">+</string>
    <string name="main_create_new_team">Add New Expense</string>
    <string name="icon_home">Home</string>
    <string name="icon_dashboard">Dashboard</string>
    <string name="icon_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="price">Price ($):</string>
    <string name="date">Date:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
