<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
    android:id="@+id/fagment_create_new_expense"
    tools:context=".fragments.CreateNewExpenseFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_new_expense_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/settings_toolbar_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_create_new_team"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- type field -->
    <TextView
        android:id="@+id/create_text_type_display"
        style="@style/text_display"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_expense_toolbar" />

    <Spinner
        android:id="@+id/create_text_type_value"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/create_text_type_display"
        app:layout_constraintStart_toEndOf="@id/create_text_type_display" />

    <!-- name field -->
    <TextView
        android:id="@+id/create_text_name_display"
        style="@style/text_display"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_text_type_display" />

    <EditText
        android:id="@+id/create_text_name_value"
        style="@style/text_enter"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/create_text_name_display"
        app:layout_constraintStart_toEndOf="@id/create_text_name_display"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"/>

    <!-- price field -->
    <TextView
        android:id="@+id/create_text_price_display"
        style="@style/text_display"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_text_name_display" />

    <EditText
        android:id="@+id/create_text_price_value"
        style="@style/text_enter"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="@id/create_text_price_display"
        app:layout_constraintStart_toEndOf="@id/create_text_price_display"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/create_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_text_price_display" />

    <Button
        android:id="@+id/create_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/create_cancel_button"
        app:layout_constraintEnd_toEndOf="@id/create_text_price_value"
        app:layout_constraintStart_toEndOf="@id/create_cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>